--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "patch-package": "^8.0.0",
     "react": "^19.0.0",
     "react-awesome-reveal": "^4.2.10",
-    "react-day-picker": "^8.10.1",
+    "@emotion/react": "^11.14.0",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.54.2",
@@ -59,12 +59,7 @@
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.2"
   },
-  "overrides": {
-    "react-day-picker": {
-      "react": "$react",
-      "react-dom": "$react-dom"
-    }
-  },
+  
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^19.0.0",
